Woo product Grid: layout breaking issue fixed

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -3123,6 +3123,9 @@
         .elementor-widget-container{
             .eael-product-grid,
             .eael-post-grid{
+                .woocommerce ul.products{
+                    display: grid;
+                }
                 li.product{
                     max-width: 100%;
                     .eael-product-wrap {
